# BStack

./: .gitignore  .gitmodules  Makefile  README.md  blog.md  pyproject.toml  pytest.ini
bw_apis/: __init__.py
bw_apis/cpp/: plan.hpp
bw_stack/: paths.py
docs/: README.md
integration/: __init__.py
integration/data_pipeline/: __init__.py  datajax_bridge.py
integration/examples/: __init__.py  run_stack.py
integration/kv_data_plane/: __init__.py
integration/weight_swapper/: runner.py
scripts/: check_lock.py  codegen.py
src/bstack/: paths.py
src/bstack_apis/cpp/: plan.hpp
src/bstack_apis/proto/: plan.proto
src/bstack_apis/python/: __init__.py
src/bw_apis/proto/: plan.proto
src/bw_apis/python/: plan.py
src/integration/bench/: README.md
src/integration/data_pipeline/: datajax_bridge.py
src/integration/examples/: run_stack.py
src/integration/kv_data_plane/: runner.py
src/integration/weight_swapper/: __init__.py  runner.py
tests/: conftest.py  test_bstack_apis.py  test_bw_apis.py  test_integration_smoke.py
